traces/bug_623.txt
examples++-hpddm/hpddm.cpp:793: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-hpddm/hpddm.cpp:793:1: initialization of callDoLoadInit
791.   }
792.   
793. > LOADFUNC(Init_Schwarz)

examples++-hpddm/hpddm.cpp:793:1: call to DoLoadInit
791.   }
792.   
793. > LOADFUNC(Init_Schwarz)

examples++-hpddm/hpddm.cpp:793:1: call to addInitFunct
  791.   }
  792.   
  793. > LOADFUNC(Init_Schwarz)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
